// Copyright (c) 2023 AccelByte Inc. All Rights Reserved.
// This is licensed software from AccelByte Inc, for limitations
// and restrictions contact your company contract manager.

syntax = "proto3";

option csharp_namespace = "AccelByte.Extend.ChallengeService";
option go_package = "accelbyte.net/extend/challengeservice";
option java_package = "net.accelbyte.extend.challengeservice";
option java_multiple_files = true;

package service;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "permission.proto";

// Challenge Service - Renamed from template's Service (Decision Q1)
service Service {
  // Get all challenges with user progress
  // NOTE: HTTP endpoint uses OptimizedChallengesHandler (see docs/ADR_001_OPTIMIZED_HTTP_HANDLER.md)
  rpc GetUserChallenges (GetChallengesRequest) returns (GetChallengesResponse) {
    option (google.api.http) = {
      get: "/v1/challenges"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get user challenges";
      description: "Retrieve all challenges for the authenticated user with current progress";
      tags: "Challenges";
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }

  // Initialize player with default goals (M3 Phase 2)
  rpc InitializePlayer (InitializeRequest) returns (InitializeResponse) {
    option (google.api.http) = {
      post: "/v1/challenges/initialize"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Initialize player goals";
      description: "Assign default goals to new players or sync existing players with config changes";
      tags: "Challenges";
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }

  // Set goal active/inactive (M3 Phase 3)
  rpc SetGoalActive (SetGoalActiveRequest) returns (SetGoalActiveResponse) {
    option (google.api.http) = {
      put: "/v1/challenges/{challenge_id}/goals/{goal_id}/active"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Set goal active/inactive";
      description: "Allow players to manually control goal assignment";
      tags: "Challenges";
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }

  // Claim reward for completed goal
  rpc ClaimGoalReward (ClaimRewardRequest) returns (ClaimRewardResponse) {
    option (google.api.http) = {
      post: "/v1/challenges/{challenge_id}/goals/{goal_id}/claim"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Claim goal reward";
      description: "Claim reward for a completed goal";
      tags: "Challenges";
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }

  // M4: Batch manual goal selection
  rpc BatchSelectGoals (BatchSelectRequest) returns (GoalSelectionResponse) {
    option (google.api.http) = {
      post: "/v1/challenges/{challenge_id}/goals/batch-select"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Batch select goals";
      description: "Activate multiple player-selected goals at once (atomic operation)";
      tags: "Challenges";
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }

  // M4: Random goal selection
  rpc RandomSelectGoals (RandomSelectRequest) returns (GoalSelectionResponse) {
    option (google.api.http) = {
      post: "/v1/challenges/{challenge_id}/goals/random-select"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Random select goals";
      description: "Randomly select N goals from a challenge and activate them";
      tags: "Challenges";
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }

  // Health check endpoint (Decision FQ5)
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/healthz"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Health check";
      description: "Check service and database health";
      tags: "Health";
    };
  }
}

// Request/Response Messages
message GetChallengesRequest {
  // User ID extracted from JWT (not from request body)

  // M3 Phase 4: Filter to show only active goals (default: false shows all goals)
  bool active_only = 1;
}

message GetChallengesResponse {
  repeated Challenge challenges = 1;
}

message InitializeRequest {
  // User ID and namespace extracted from JWT (not from request body)
}

message InitializeResponse {
  repeated AssignedGoal assigned_goals = 1;
  int32 new_assignments = 2;
  int32 total_active = 3;
}

message SetGoalActiveRequest {
  string challenge_id = 1;
  string goal_id = 2;
  bool is_active = 3;
}

message SetGoalActiveResponse {
  string challenge_id = 1;
  string goal_id = 2;
  bool is_active = 3;
  string assigned_at = 4;
  string message = 5;
}

message ClaimRewardRequest {
  string challenge_id = 1;
  string goal_id = 2;
}

message ClaimRewardResponse {
  string goal_id = 1;
  string status = 2;
  Reward reward = 3;
  string claimed_at = 4;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}

// M4: Batch select request
message BatchSelectRequest {
  string challenge_id = 1;
  repeated string goal_ids = 2;
  bool replace_existing = 3;
}

// M4: Random select request
message RandomSelectRequest {
  string challenge_id = 1;
  int32 count = 2;
  bool replace_existing = 3;
  bool exclude_active = 4;
}

// M4: Goal selection response (shared by batch and random)
message GoalSelectionResponse {
  repeated SelectedGoal selected_goals = 1;
  string challenge_id = 2;
  int32 total_active_goals = 3;
  repeated string replaced_goals = 4;
}

// M4: Selected goal info
message SelectedGoal {
  string goal_id = 1;
  string name = 2;
  string description = 3;
  Requirement requirement = 4;
  Reward reward = 5;
  string status = 6;
  int32 progress = 7;
  int32 target = 8;
  bool is_active = 9;
  string assigned_at = 10;
  string expires_at = 11;
}

// Domain Models
message Challenge {
  string challenge_id = 1;
  string name = 2;
  string description = 3;
  repeated Goal goals = 4;
}

message Goal {
  string goal_id = 1;
  string name = 2;
  string description = 3;
  Requirement requirement = 4;
  Reward reward = 5;
  repeated string prerequisites = 6;
  int32 progress = 7;
  string status = 8;
  bool locked = 9;
  string completed_at = 10;
  string claimed_at = 11;
}

message AssignedGoal {
  string challenge_id = 1;
  string goal_id = 2;
  string name = 3;
  string description = 4;
  bool is_active = 5;
  string assigned_at = 6;
  string expires_at = 7;
  int32 progress = 8;
  int32 target = 9;
  string status = 10;
  Requirement requirement = 11;
  Reward reward = 12;
}

message Requirement {
  string stat_code = 1;
  string operator = 2;
  int32 target_value = 3;
}

message Reward {
  string type = 1;
  string reward_id = 2;
  int32 quantity = 3;
}

// OpenAPI options for the entire API (Decision Q11)
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "AccelByte Challenge Service API";
    version: "1.0";
    description: "Challenge service for managing user challenge progress and reward claims";
  };
  base_path: "/challenge";

  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
      }
    }
  };
};
